--- a/css/tablet.css
+++ b/css/tablet.css
@@ -12,11 +12,11 @@
 }
 
 .nav-ul {
-  gap: 25px;
   font-size: 1rem;
 }
 
 .nav-li {
+  padding-left: 20px;
   list-style: none;
 }
 
@@ -34,7 +34,6 @@
 .main-container {
   flex-direction: row-reverse;
   align-items: center;
-  gap: 50px;
   background-image: url(../image/Illustration-header.png);
   background-position: right 0 top 50px;
   background-size: 60%;
@@ -46,6 +45,11 @@
 
 .svg-container {
   flex-direction: column;
+  padding-right: 50px;
+}
+
+.svg-container a {
+  padding-top: 20px;
 }
 
 /* end of home styling */
@@ -70,12 +74,12 @@
 
 .stories-div {
   flex-direction: row;
-  gap: 20px;
   margin-top: 70px;
 }
 
 .stories-div-img {
   width: 50%;
+  margin-right: 30px;
 }
 
 .stories-div h3 {
